# html-blog-generator

./: html-printer.cabal
.stack-work/: stack.sqlite3
app/: Main.hs  OptParse.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: html-printer-0.1.0.0-inplace.conf  package.cache
src/: HtmlPrinter.hs
src/HtmlPrinter/: Convert.hs  Directory.hs  Env.hs  Html.hs  Markup.hs  Test.hs
src/HtmlPrinter/Html/: Internal.hs
test/: MarkupParsingSpec.hs
tmp/: sample.txt  test.html
